# oddify

./: .gitignore  Procfile  README.md  icon.psd  keepalive.py  main.py  oddifiers.py  ping.py  pokemon.py  pyproject.toml  requirements.txt
assets/: face.psd
